--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>Type your username</h3>
         <label for="userName">Username</label>
             <input id="userName" type="text" value="" placeholder="Enter your username" required>
-        <button href="#" id="button_first_screen" type="button" disabled>Enter</button>
+        <button href="#" id="button_first_screen" type="button" >Enter</button>
     </div>
 
 <!----------------------------RANKING BOX----------------------------->
@@ -30,17 +30,17 @@
     </div>
 
 <!----------------------------START GAME SCREEN----------------------------->
-    <div class="pre_game">
+    <div class="pre_game-none">
         <button id="button_second_screen" type="button">Start Game</button>
     </div>
 
 <!----------------------------MAIN GAME SCREEN----------------------------->
-    <div class="main_screen_game">
+    <div class="main_screen_game-none">
         <button id="button_game" type="button">Click Me!</button>
     </div>
 
 <!----------------------------YOUR SCORE GAME ----------------------------->
-    <div class="score_screen">
+    <div class="score_screen-none">
         <h3>Your score</h3>
         <p>Your time is up!</p>
         <h4 id="your_score">You have made 44 clicks</h4>
