add storage ranking

--- a/index.html
+++ b/index.html
@@ -19,14 +19,7 @@
 <!----------------------------RANKING BOX----------------------------->
     <div class="ranking">
         <h4>User Scores</h4>
-        <h5>Pepe</h5>
-        <p>1</p>
-        <h5>Pepe</h5>
-        <p>2</p>
-        <h5>Pepe</h5>
-        <p>3</p>
-        <h5>Pepe</h5>
-        <p>4</p>
+            <ol id="hiresultList"></ol>
     </div>
 
 <!----------------------------START GAME SCREEN----------------------------->
