add new features

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Khitan+Small+Script&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>Clicks in 10 seconds</title>
@@ -18,7 +21,7 @@
 
 <!----------------------------RANKING BOX----------------------------->
     <div class="ranking">
-        <h4>User Scores</h4>
+        <h4 class="title_ranking">User Scores</h4>
             <ol id="hiresultList"></ol>
     </div>
 
@@ -36,7 +39,7 @@
     <div class="score_screen-none">
         <h3>Your score</h3>
         <p>Your time is up!</p>
-        <h4 id="your_score">You have made 44 clicks</h4>
+        <h4 id="your_score"></h4>
         <button id="button_play_again" type="button">Play again</button>
     </div>
 
