add phase 2 feature

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
         <button id="button_play_again" type="button">Play again</button>
     </div>
 
+<!-------------------MOVING BOX START GAME SCREEN------------------------>
+<div class="pre_moving_game-none">
+    <button id="button_moving_second_screen" type="button">Watch Out!</button>
+</div>
+
+<!-------------------MOVING BOX START GAME SCREEN------------------------>
+<div class="main_moving_screen_game-none">
+    <button id="button_moving_game" type="button">Click Me!</button>
+</div>
+
+
     <script src="main.js"></script>
 </body>
 </html>
