add close button

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p>Your time is up!</p>
         <h4 id="your_score"></h4>
         <button id="button_play_again" type="button">Play again</button>
+        <button id="button_back_login" type="button">Close</button>
     </div>
 
 <!-------------------MOVING BOX START GAME SCREEN------------------------>
